--- a/src/components/buy-tickets/style.css
+++ b/src/components/buy-tickets/style.css
@@ -1,143 +1,194 @@
-*{
-    padding: 0%;
-    margin: 0%;
-    box-sizing: border-box;
+* {
+  padding: 0%;
+  margin: 0%;
+  box-sizing: border-box;
+}
+.root-background {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  background-color: #492c81;
+}
+.background-components > h1 {
+  color: #ffb237;
+  font-size: 3.5rem;
 }
 
-.background-components>h1{
-    color: #ffb237;
-    font-size: 3.5rem;
+.background-components > h3 {
+  color: white;
+  font-size: 1.2rem;
 }
 
-.background-components>h3{
-    color: white;
-    font-size: 1.2rem;
-
+.bg2 {
+  position: relative;
+  width: 100%;
+  height: 5vh;
+  top: 4vh;
+  /* filter: blur(2px); */
+  z-index: 10;
 }
 
-.background{
-    width: 100%;
-    height: 475px;
-    background: linear-gradient(#7749d4,#492c81);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
+.bg-star {
+  position: absolute;
+  left: 4%;
+  top: 0%;
+  z-index: 11;
 }
 
-.background-components{
-    width: 250px;
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-    top: 15px;
+.background {
+  width: 100%;
+  height: 400px;
+  background: linear-gradient(#7749d4, #492c81);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-.buy-tickets{
-    width: 250px;
-    height: 100px;
-    background-color: #ffb237;
-    border-radius: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    animation: mymove-buytickets ease-in-out 1.3s infinite;
-    animation-direction: alternate;
+.background-components {
+  width: 250px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  top: 15px;
+}
+
+.buy-tickets {
+  width: 250px;
+  height: 100px;
+  background-color: #ffb237;
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: mymove-buytickets ease-in-out 1.3s infinite;
+  animation-direction: alternate;
 }
 @keyframes mymove-buytickets {
-    0% {
-      transform: rotate(-3deg);
-    }
-    100% {
-      transform: rotate(3deg);
-    }
+  0% {
+    transform: rotate(-3deg);
   }
-
-.click-btn{
-    width: 210px;
-    height: 40px;
-    background-color: #5f39ad;
-    border-radius: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-weight: bold;
-
+  100% {
+    transform: rotate(3deg);
+  }
 }
 
-.background-images{
-    padding-top: 40px;
-    width: 120px;
-    height: 350px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 12%;
+.click-btn {
+  width: 210px;
+  height: 40px;
+  background-color: #5f39ad;
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
 }
 
-.big-star{
-    position: relative;
-    right: 40px;
-    animation: mymove-bigstar ease-in-out 1.3s infinite;
-    animation-direction: alternate;
+.background-images {
+  padding-top: 40px;
+  width: 120px;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 12%;
+}
+
+.big-star {
+  position: relative;
+  right: 40px;
+  animation: mymove-bigstar ease-in-out 1.3s infinite;
+  animation-direction: alternate;
 }
 @keyframes mymove-bigstar {
-    from {right: 80px; top: 0px;}
-    to {right: 50px; top: 10px;}
+  from {
+    right: 80px;
+    top: 0px;
   }
-
-.box-container{
-    width: 45%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  to {
+    right: 50px;
+    top: 10px;
+  }
 }
 
-.threestars{
-    position: relative;
-    left: 40px;
-    animation:  mymove-threestars ease-in-out  1.5s  infinite ;
-    animation-direction: alternate;
+.box-container {
+  width: 45%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.threestars {
+  position: relative;
+  left: 40px;
+  animation: mymove-threestars ease-in-out 1.5s infinite;
+  animation-direction: alternate;
 }
 @keyframes mymove-threestars {
-    from {left: 10px; bottom: 0px;}
-    to {left: 45px; bottom: 10px;}
+  from {
+    left: 10px;
+    bottom: 0px;
   }
+  to {
+    left: 45px;
+    bottom: 10px;
+  }
+}
 
-.small-star{
-    position: relative;
-    right: 20px;
-    animation:  mymove-smallstar ease-in-out  1.5s  infinite ;
-    animation-direction: alternate;
+.small-star {
+  position: relative;
+  right: 20px;
+  animation: mymove-smallstar ease-in-out 1.5s infinite;
+  animation-direction: alternate;
 }
 @keyframes mymove-smallstar {
-    from {right: 20px; bottom: 0px;}
-    to {right: 40px; bottom: 10px;}
+  from {
+    right: 20px;
+    bottom: 0px;
   }
-
-.gold-ticket{
-    position: relative;
+  to {
+    right: 40px;
     bottom: 10px;
-    animation:  mymove-goldticket ease-in-out  1.5s  infinite ;
-    animation-direction: alternate;
+  }
+}
+
+.gold-ticket {
+  position: relative;
+  bottom: 10px;
+  animation: mymove-goldticket ease-in-out 1.5s infinite;
+  animation-direction: alternate;
 }
 @keyframes mymove-goldticket {
-    from {right: 20px; top: 0px;}
-    to {right: 40px; top: 10px;}
+  from {
+    right: 20px;
+    top: 0px;
   }
-
-.silverticket{
-    position: relative;
+  to {
+    right: 40px;
     top: 10px;
-    animation:  mymove-silverticket ease-in-out  1s  infinite ;
-    animation-direction: alternate;
+  }
+}
+
+.silverticket {
+  position: relative;
+  top: 10px;
+  animation: mymove-silverticket ease-in-out 1s infinite;
+  animation-direction: alternate;
 }
 @keyframes mymove-silverticket {
-    from {left: 0px; top: 0px;}
-    to {left: 15px; top: 8px;}
+  from {
+    left: 0px;
+    top: 0px;
   }
+  to {
+    left: 15px;
+    top: 8px;
+  }
+}
