--- a/src/components/connect-wallet/style.css
+++ b/src/components/connect-wallet/style.css
@@ -3,7 +3,18 @@
 .connect-wallet-backgrouand{
     background: linear-gradient(#313b5b,#393157);
     width: 100%;
-    height: 220px;
+    height: 300px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+}
+
+.text-btn{
+    width: 220px;
+    height: 190px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,13 +27,47 @@
     position: relative;
     top: 25px;
     background-color: #1fc7d4;
-    width: 35%;
+    width: 15%;
     height: 45px;
-    border-radius: 0.8rem;
+    border-radius: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 0.03em;
+    line-height: 1;
+    opacity: 1;
+    outline: 0px;
+    height: 48px;
+    padding: 0px 24px;
+    background-color: rgb(31, 199, 212);
+    color: white;
+    width: 190px;
+   cursor: pointer;
+
+}
+
+.text-btn>h2{
+    color: rgb(244, 238, 255);
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1.5;
+    text-align: center;
+}
+
+
+.connect-wallet-gold-ticket{
+    position: relative;
+    top: 10px;
+    right: 10px;
+
+}
+
+.connect-wallet-silver-ticket{
+    position: relative;
+    top: 10px;
+    left: 10px;
 }
