--- a/src/components/finished-rounds/style.css
+++ b/src/components/finished-rounds/style.css
@@ -9,13 +9,15 @@
 }
 
 .finished-rounds-background > h2 {
-  color: #280d5f;
+  color: rgb(40, 13, 95);
   font-size: 30px;
+  font-weight: 600;
+  line-height: 1.5;
 }
 
 .choose-btn {
-  background-color: #eeeaf4;
-  width: 48%;
+  background-color: rgb(238, 234, 244);
+  width: 300px;
   height: 35px;
   border-radius: 1.5rem;
   display: flex;
@@ -23,7 +25,7 @@
 
 .all-history-btn {
   background-color: #7a6eaa;
-  width: 50%;
+  width: 150px;
   height: 35px;
   border-radius: 1.5rem;
   display: flex;
@@ -31,11 +33,26 @@
   align-items: center;
   color: white;
   font-weight: bold;
+  cursor: pointer;
+
+}
+.all-history-btn-hide {
+  background-color: rgb(238, 234, 244);
+  width: 150px;
+  height: 35px;
+  border-radius: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #7a6eaa;
+  font-weight: bold;
+  cursor: pointer;
+
 }
 
 .your-history-btn {
   background-color: #7a6eaa;
-  width: 50%;
+  width: 150px;
   height: 35px;
   border-radius: 1.5rem;
   display: flex;
@@ -43,11 +60,27 @@
   align-items: center;
   color: white;
   font-weight: bold;
+  cursor: pointer;
+
+}
+
+.your-history-btn-hide {
+  background-color: rgb(238, 234, 244);
+  width: 150px;
+  height: 35px;
+  border-radius: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #7a6eaa;
+  font-weight: bold;
+  cursor: pointer;
+
 }
 
 .your-history-show {
-  width: 90%;
-  height: 350px;
+  width: 55vw;
+  height: 420px;
   background-color: white;
   border-radius: 1.5rem;
   display: flex;
@@ -55,6 +88,7 @@
   justify-content: start;
   align-items: center;
 }
+
 
 .your-history-hide {
   display: none;
@@ -75,34 +109,45 @@
 }
 
 .connect-wallet {
+  position: relative;
+  top: 25px;
   background-color: #1fc7d4;
-  width: 32%;
-  height: 48px;
-  border-radius: 1rem;
+  width: 15%;
+  height: 45px;
+  border-radius: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 0.03em;
+  line-height: 1;
+  opacity: 1;
+  outline: 0px;
+  height: 48px;
+  padding: 0px 24px;
+  background-color: rgb(31, 199, 212);
+  color: white;
+  width: 190px;
   position: relative;
   top: 85px;
-  font-size: 16px;
 }
 
-.your-history > h2 {
+.your-history-show > h2 {
   font-size: 15px;
   position: relative;
   top: 60px;
   color: #8b81b5;
 }
 
-.rounds-divider {
+.rounds-box-divider {
   background-color: #edeaf0;
   width: 100%;
   height: 2px;
   position: relative;
-  top: 160px;
+  top: 20px;
 }
 
 .box-rounds > h2 {
@@ -111,7 +156,7 @@
   font-size: 20px;
 }
 
-.your-history-hide > h5 {
+.your-history-show > h5 {
   position: relative;
   top: 180px;
   font-size: 12px;
@@ -119,8 +164,8 @@
 }
 
 .all-history-show {
-  width: 90%;
-  height: 270px;
+  width: 55vw;
+  height: 315px;
   background-color: white;
   border-radius: 1.5rem;
   display: flex;
@@ -131,4 +176,256 @@
 
 .all-history-hide {
   display: none;
+}
+
+
+.round-box{
+  width: 100%;
+  height: 110px;
+  border-top-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.text{
+  width: 50vw;
+  height: 5vh;
+  color: rgb(40, 13, 95);
+  font-weight: bold;
+  line-height: 1.5;
+  font-size: 20px;
+}
+
+.number{
+  width: 50vw;
+  height: 10vh;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 2vh;
+}
+
+.date-time{
+  width: 50vw;
+  height: 5vh;
+  color: rgb(40, 13, 95);
+  font-weight: 700;
+  line-height: 1.5;
+  font-size: 14px;
+}
+
+.round-text{
+  width: 25vw;
+  height: 7vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.arrows{
+  width: 30vw;
+  height: 3vh;
+}
+
+.box-number{
+  background-color: rgb(238, 234, 244);
+  border-radius: 16px;
+  box-shadow: rgb(74 74 104 / 10%) 0px 2px 2px -1px inset;
+  color: rgb(40, 13, 95);
+  display: flex;
+  font-size: 16px;
+  height: 40px;
+  outline: 0px;
+  padding: 0px 16px;
+  width: 12vw;
+  border: 1px solid rgb(215, 202, 236);
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.bottom-divider{
+  background-color: #edeaf0;
+  width: 100%;
+  height: 2px;
+  margin-top: 3vh;
+}
+
+.text-cyrcle{
+  width: 100%;
+  height: 12vh;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5vh;
+}
+
+.winning-number-text{
+  width: 12vw;
+  height: 5vh;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 3.5vh;
+  color: rgb(40, 13, 95);
+  font-size: 19px;
+  font-weight: 600;
+  line-height: 1.5;
+}
+.winning-number-cyrcles{
+  width: 33vw;
+  height: 6.5vh;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  margin-top: 3.5vh;
+  margin-right: 4.5vh;
+  display: flex;
+}
+
+.winning-number-cyrcle1{
+  width: 4vw;
+  height: 4vw;
+  border-radius: 100%;
+  background-color: palevioletred;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: 3px solid palevioletred;
+  box-shadow: rgb(238 234 244) 1px 3px 4px inset;
+  font-weight: bold;
+  font-size: 30px;
+
+}
+.winning-number-cyrcle2{
+  width: 4vw;
+  height: 4vw;
+  border-radius: 100%;
+  background-color: rgb(124, 67, 150);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: 3px solid rgb(124, 67, 150);
+  box-shadow: rgb(238 234 244) 1px 3px 4px inset;
+  font-weight: bold;
+  font-size: 30px;
+
+}
+.winning-number-cyrcle3{
+  width: 4vw;
+  height: 4vw;
+  border-radius: 100%;
+  background-color: rgb(91, 159, 214);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: 3px solid rgb(91, 159, 214);
+  box-shadow: rgb(238 234 244) 1px 3px 4px inset;
+  font-weight: bold;
+  font-size: 30px;
+
+
+}
+.winning-number-cyrcle4{
+  width: 4vw;
+  height: 4vw;
+  border-radius: 100%;
+  background-color: rgb(26, 115, 218);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: 3px solid rgb(26, 115, 218);
+  box-shadow: rgb(238 234 244) 1px 3px 4px inset;
+  font-weight: bold;
+  font-size: 30px;
+
+}
+.winning-number-cyrcle5{
+  width: 4vw;
+  height: 4vw;
+  border-radius: 100%;
+  background-color: rgb(66, 224, 87);
+  outline: 3px solid rgb(66, 224, 87);
+  box-shadow: rgb(238 234 244) 1px 3px 4px inset;
+  font-weight: bold;
+  font-size: 30px;
+
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.winning-number-cyrcle6{
+  width: 4vw;
+  height: 4vw;
+  border-radius: 100%;
+  background-color: rgb(189, 224, 93);
+  outline: 3px solid rgb(189, 224, 93);
+  box-shadow: rgb(238 234 244) 1px 3px 4px inset;
+  font-weight: bold;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+
+}
+
+/* .all-history-prize{
+  width: 50vw;
+  height: 23vh;
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+} */
+/* .all-history-prize-pot{
+  position: relative;
+  top: 10px;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 1.1;
+  color: rgb(40, 13, 95);
+  text-align: center;
+} */
+
+/* .all-history-prize-prize{
+  color: rgb(118, 69, 217);
+    font-weight: 600;
+    font-size: 37px;
+    text-align: center;
+    line-height: 1;
+} */
+
+/* .all-history-prize-cake{
+  color: #9187b9;
+  font-size: 14px;
+  position: relative;
+  top: 5px;
+  text-align: center;
+
+  position: relative;
+
+    top: 0%;
+} */
+
+
+@media only screen and (max-width: 851px) {
+  .your-history-show {
+    width: 87vw;
+  }
+  .all-history-show{
+    width: 87vw;
+  }
+  .number{
+  width: 80vw;
+  }
+  .date-time{
+    width: 80vw;
+  }
 }
